# bathead_robot

./: README.md
bathead_drone/: CMakeLists.txt  package.xml
bathead_drone/src/: offb_node_example.cpp  uav_control_node.cpp  uav_node_copy
bathead_robot/: CMakeLists.txt  package.xml  setup.py
bathead_robot/include/: sonar_plugin_pub.h
bathead_robot/include/bathead_robot/: bathead_control_node.h
bathead_robot/launch/: gazebo.launch
bathead_robot/src/: bathead_control_node.cpp  bathead_control_node_sim.cpp  bathead_range_node.py  sonar_plugin_pub.cpp  sonar_plugin_sub.cpp
ros-pioneer3at/: CMakeLists.txt  package.xml
ros-pioneer3at/config/gazebo/: box_world.sdf  cafe_world.sdf  iris_cafe_world  iris_wg_world  iris_wg_world.sdf  wg_world.sdf  wg_world2.sdf  wg_world3.sdf  willowgarage_pioneer.world
ros-pioneer3at/launch/: hardware.launch  ui.launch
ros-pioneer3at/launch/core/: gazebo.launch
ros-pioneer3at/src/: gazebo_bridge.cpp
scripts/: bathead_robot.sh  range_test.sh  sim_launch.sh  wavconvert.py
